Stop overflowing text

--- a/themes/SimpleTheme/static/css/main.css
+++ b/themes/SimpleTheme/static/css/main.css
@@ -1,35 +1,35 @@
 main {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
-	font-family: sans-serif;
-	box-sizing: border-box;
-	font-size: 16px;
-	line-height: 1.5em;
+  font-family: sans-serif;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 1.5em;
 }
 
 article {
-	width: 100%
+  width: 100%;
 }
 
 header > h1 {
-	margin-bottom: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 header > p {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	font-style: italic;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-style: italic;
 }
 
 header {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 a {
-	color: inherit;
+  color: inherit;
 }
 
 /* aside {
@@ -41,99 +41,99 @@ article {
 } */
 
 article {
-	border: 1px solid black;
-	border-radius: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 nav > ul {
-	list-style: none;
-	/* padding: 0.5rem; */
-	padding-left: 0.5rem;
+  list-style: none;
+  /* padding: 0.5rem; */
+  padding-left: 0.5rem;
 }
 
 section {
-	padding-left: 0.5rem;
+  padding-left: 0.5rem;
+  min-width: 0;
 }
 
 figure {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 figure img {
-	max-width: 50%;
-	border: 1px solid black;
+  max-width: 50%;
+  border: 1px solid black;
 }
 
 figure {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 figcaption h4 {
-	margin-top: 0.5rem;
-	font-weight: normal;
-	font-style: italic;
-	margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  font-weight: normal;
+  font-style: italic;
+  margin-bottom: 0.5rem;
 }
 
 blockquote {
-	font-style: italic;
+  font-style: italic;
 }
 
 section p {
-	margin: 1.5em 0;
+  margin: 1.5em 0;
 }
 
 .section-list {
-	list-style: none;
-	padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 .recent-list {
-	list-style: none;
-	font-style: italic;
-	padding-left: 0;
+  list-style: none;
+  font-style: italic;
+  padding-left: 0;
 }
 
 .recent-header {
-	font-size: inherit;
-	margin-bottom: 0em;
+  font-size: inherit;
+  margin-bottom: 0em;
 }
 
 .section-list li p {
-	font-style: italic;
-	margin: 0.5em 0 1.5em 0;
+  font-style: italic;
+  margin: 0.5em 0 1.5em 0;
 }
 
 .footer {
-	font-size: 10px;
-	text-align: right;
-	margin-right: 0.5em;
+  font-size: 10px;
+  text-align: right;
+  margin-right: 0.5em;
 }
 
 .book-description {
-	font-style: italic;
+  font-style: italic;
 }
 
 @media (min-width: 800px) {
+  main {
+    width: 70vw;
+    margin: 1rem auto;
+  }
 
-	main {
-		width: 70vw;
-		margin: 1rem auto;
-	}
+  article {
+    display: flex;
+  }
 
-	article {
-		display: flex;
-	}
+  nav {
+    margin: 1rem;
+  }
 
-	nav {
-		margin: 1rem;
-	}
-
-	section {
-		margin: 1rem;
-		flex-grow: 1;
-		padding-left: 0rem;
-	}
+  section {
+    margin: 1rem;
+    flex-grow: 1;
+    padding-left: 0rem;
+  }
 }
